@@ -117,7 +117,8 @@ public class ProcessUtils {
         return Optional.ofNullable(System.getProperty("hapi.spec.test.overrides"))
                 .map(testOverrides -> Arrays.stream(testOverrides.split(","))
                         .map(override -> override.split("="))
-                        .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1])))
+                        // Last-wins on duplicate keys so later overrides supersede earlier ones instead of throwing.
+                        .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1], (first, last) -> last)))
                 .orElse(Map.of());
     }
 
@@ -179,12 +180,19 @@ public class ProcessUtils {
             try {
                 final int poolMib = Integer.parseInt(nodePoolMib);
                 final int networkSize = Integer.getInteger("hapi.spec.network.size", 4);
-                final int perNodeMib = Math.max(512, Math.min(4096, poolMib / networkSize));
+                final int perNodeMib = Math.clamp(poolMib / networkSize, 2048, 4096);
                 commandLine.add("-Xmx" + perNodeMib + "m");
             } catch (NumberFormatException e) {
                 log.warn("Invalid hapi.spec.node.poolMib value: {}", nodePoolMib);
             }
         }
+        // Write GC logs to the node's output dir so multi-second stalls can be diagnosed as long stop-the-world GC
+        // pauses (or ruled out)
+        final var gcLogPath = metadata.workingDirOrThrow()
+                .resolve(OUTPUT_DIR)
+                .resolve("gc.log")
+                .toAbsolutePath();
+        commandLine.add("-Xlog:gc*:file=" + gcLogPath + ":time,uptime,level,tags");
         // Only activate JDWP if not in CI
         if (System.getenv("CI") == null) {
             commandLine.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend="
